--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,3 +4,12 @@
     color: blueviolet;
     border-bottom: solid 5px aqua;
 }
+
+@media screen and (max-width: 450px) {
+    .header {
+        font-family: sans-serif;
+        font-size: 1.5em;
+        color: green;
+        border-bottom: solid 5px green;
+    }
+  }
