--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,12 @@
     font-size: 15px;
   }
 }
+
+@media (orientation: portrait) {
+  .search-title {
+    font-size: 20px;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+}
